--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^8.2.5",
     "@mantine/hooks": "^8.2.5",
     "@tabler/icons-react": "^3.34.1",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.11.0",
     "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "dayjs": "^1.11.13",
